--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>br.com.ravelino.MouseMove</mainClass>
+							<mainClass>br.com.ravelino.Application</mainClass>
 						</manifest>
 					</archive>
 					<descriptorRefs>
